--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <title>Electron App</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            font-family: Arial, sans-serif;
+        }
+        .start-button {
+            padding: 15px 30px;
+            font-size: 18px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+        .start-button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <h1>Привет, Electron!</h1>
-    <p>Это минимальное приложение на Electron</p>
+    <button class="start-button" id="startButton">Start</button>
 </body>
 </html>
