--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             padding: 15px 30px;
             font-size: 18px;
             cursor: pointer;
-            background-color: #4CAF50;
+            background-color: #ff0000;
             color: white;
             border: none;
             border-radius: 4px;
             transition: background-color 0.3s;
         }
         .start-button:hover {
-            background-color: #45a049;
+            background-color: #cc0000;
         }
     </style>
 </head>
